            events for existing stages are simpler
        - there might be various errors around this, it is highly experimental

    Gameplay:
        - items can now set which blocks they can break in gamemode 2

    Behind-the-scenes:
        - improved memory usage for loading event annotations
        - improved memory usage in BlockFaceState for hidden blocks


changelog of snapshot 20w51a, released on 18.12.2020, targeting 20w51a
    WARNING:  M A J O R  BREAKING VERSION!!!!
    THIS VERSION CONTAINS HIGHLY BREAKING CHANGES. IT IS NOWHERE NEAR TO BEING COMPATIBLE

    THIS ALSO ENDS SUPPORT FOR ALL OLD VERSIONS BEFORE THIS RELEASE

    BREAKING CHANGES MAY CONTINUE UNTIL STABLE RELEASE

    THIS SNAPSHOT FIXES A  L O T  OF ISSUES [partly by rewriting the parts, partly by code review]

    this is nowhere near an complete list, see version.info for more, or the github logs

    refactoring:
        - refactored nearly everything..., multiple times...
        majors:
            - globals.py to mcpython/shared.py
            - logger.py to mcpython/logger.py
            - most stuff into client/, server/ or common/-folders
            - NO support for non-mcpython-prefixed imports

    deprecation:
        - removed all deprecated stuff and a little bit more

    API:
        - improved, refactored, extended APIS [nearly all]

    Utils:
        - added more util code

    Debug:
        - added more debug info
        - added an debug generator for biome distribution

    Rendering:
        - improved some bits
        - improved texture reload
        - changed rendering code for a lot of stuff

    World Storage:
        - improved overall world storage & debug information

    World gen:
        - a lot of changes, again...
        - moved world generator config in-game

    fixed issues:
        - InventoryHandler was handling some itemstack's wrong leading into itemstack's with higher stack size
        - logging was not escaping in all cases correctly