@@ -34,6 +34,9 @@ data_gen = (
     "--data-gen" in sys.argv or "--invalidate-cache" in sys.argv
 ) and dev_environment
 data_gen_exit = "--exit-after-data-gen" in sys.argv  # default vanilla behaviour
+if data_gen_exit and not data_gen:
+    raise RuntimeError("could not --exit-after-data-gen and not --data-gen!")
+NO_WINDOW = False
 
 IS_CLIENT = True
 
